@@ -263,3 +263,5 @@
 	  return value from spawned applications (provided by Mike Smith)
 	* apps/nslib:  Lock the schedule while starting built-in applications
 	  in order to eliminate race conditions (also from Mike Smith).
+	* apps/examples/adc, pwm, and qencoder:  Add support for testing
+	  devices with multiple ADC, PWM, and QE devices.
